<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Ascent</string>
	<string name="crag">Crag</string>
	<string name="top10">Top 10</string>
	<string name="summary">Overview</string>
	<string name="style_prompt">Style</string>
	<string name="commentLabel">Comment</string>
	<string name="deleteAscent">Delete Ascent</string>
	<string name="repeatAscent">Repeat Ascent</string>
	<string name="deleteCrag">Delete Crag</string>
	<string name="latestAscents">Ascents</string>
	<string name="addAscent">Add Ascent</string>
	<string name="addProject">Add Project</string>
	<string name="editAscent">Edit Ascent</string>
	<string name="addCrag">Add Crag</string>
	<string name="addAsProject">Add as Project</string>
	<string name="crags">Crags</string>
	<string name="years">Year</string>
	<string name="projects">Projects</string>
	<string name="importData">Import Data</string>
	<string name="exportData">Export Data</string>
	<string name="notMounted">SD card not present or not mounted</string>
	<string name="exportToFile">Exporting to /sdcard/ascent-export.csv</string>
	<string name="importFileFound">Found import file /sdcard/ascent.csv</string>
	<string name="importFileNotFound">Could not find import file /sdcard/ascent.csv</string>
	<string name="importingData">Importing Data. Please wait…</string>
	<string name="exportingData">Exporting Data. Please wait…</string>
	<string name="importButton">Import</string>
	<string name="exportButton">Export</string>
	<string name="overwrite">File Exists</string>
	<string name="overwriteText">Export file /sdcard/ascent-export.csv exists, overwrite?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="grade">Grade</string>
	<string name="name">Name</string>
	<string name="country">Country</string>
	<string name="attempts">Attempts</string>
	<string name="pickDate">Pick Date</string>
	<string name="cancel">Cancel</string>
	<string name="update">Update</string>
	<string name="add">Add</string>
	<string name="score">Score</string>
	<string name="tickProject">Tick Project</string>
	<string name="deleteProject">Delete Project</string>
	<string name="grades">Grades</string>
	<string name="last12Months">Last 12 Months</string>
	<string name="allTime">All Time</string>
	<string name="tried">Tried</string>
    <string name="no_results">No results found for \"%s\"</string>
	<string name="search_hint">Search Ascents</string>
    <string name="search_instructions">Use the search box in the Action Bar to look up an Ascent</string>
    <string name="menu_search">Search</string>
    <string name="done">Done</string>
    <string name="APP_KEY">ifyag9s8v2ovymw</string>

    <plurals name="search_results">
      <item quantity="one">%1$d result for \"%2$s\": </item>
      <item quantity="other">%1$d results for \"%2$s\": </item>
    </plurals>

   	<string-array name="styles">
		<item>Onsight</item>
		<item>Flash</item>
		<item>Redpoint</item>
		<item>Toprope</item>
		<item>Repeat</item>
		<item>Multipitch</item>
		<item>Tried</item>
	</string-array>

	<string-array name="grades">
		<item>3</item>
		<item>4</item>
		<item>5a</item>
		<item>5b</item>
		<item>5c</item>
		<item>6a</item>
		<item>6a+</item>
		<item>6b</item>
		<item>6b+</item>
		<item>6c</item>
		<item>6c+</item>
		<item>7a</item>
		<item>7a+</item>
		<item>7b</item>
		<item>7b+</item>
		<item>7c</item>
		<item>7c+</item>
		<item>8a</item>
		<item>8a+</item>
		<item>8b</item>
		<item>8b+</item>
		<item>8c</item>
		<item>8c+</item>
		<item>9a</item>
		<item>9a+</item>
		<item>9b</item>
		<item>9b+</item>
		<item>9c</item>
		<item>9c+</item>
		<item>10a</item>
		<item>10a+</item>
		<item>10b</item>
		<item>10b+</item>
		<item>10c</item>
		<item>10c+</item>
	</string-array>
		<string name="example_ascents">Ascents: 350 - 12M: 120</string>
		<string name="example_score">Score: 10000 - All Time: 11000 - Year: 9500</string>

</resources>