<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/search"
          android:title="@string/menu_search"
          android:icon="@drawable/ic_menu_search"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />
	<item
        android:id="@+id/menu_add"
        android:showAsAction="ifRoom|withText"
        android:title="@string/add"/>
    <item
        android:id="@+id/menu_crags"
        android:showAsAction="ifRoom|withText"
        android:title="@string/crags"/>
<!--     <item
        android:id="@+id/menu_projects"
        android:showAsAction="ifRoom|withText"
        android:title="Projects"/>
 -->    <item
        android:id="@+id/menu_score"
        android:showAsAction="ifRoom|withText"
        android:title="@string/score"/>
    <item
        android:id="@+id/menu_grade"
        android:showAsAction="ifRoom|withText"
        android:title="@string/grades"/>
    <item
        android:id="@+id/menu_top10"
        android:showAsAction="ifRoom|withText"
        android:title="@string/top10"/>
    <item
        android:id="@+id/menu_summary"
        android:showAsAction="ifRoom|withText"
        android:title="@string/summary"/>
    <item
        android:id="@+id/menu_import"
        android:showAsAction="ifRoom|withText"
        android:title="@string/importButton"/>
    <item
        android:id="@+id/menu_export"
        android:showAsAction="ifRoom|withText"
        android:title="@string/exportButton"/>

</menu>