<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" >

	<TextView
		android:id="@+id/craglabel"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/crag" />

	<EditText
		android:id="@+id/crag"
		android:inputType="text"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>

	<TextView
		android:id="@+id/countrylabel"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/country" />

	<EditText
		android:id="@+id/country"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:inputType="text" />

	<Button
		android:id="@+id/ok"
		android:layout_width="fill_parent"
		android:layout_height="55dp"
		android:text="@string/add"
		android:textSize="18dp" >
	</Button>

</LinearLayout>