<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/namelabel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:labelFor="@+id/routename"
                android:text="@string/name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/routename"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textCapWords"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/craglabel"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:text="@string/crag"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/cragspinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:prompt="@string/crag" />

            <TextView
                android:id="@+id/dateDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/gradelabel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/grade"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/gradespinner"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:prompt="@string/grade" />

            <Spinner
                android:id="@+id/stylespinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:prompt="@string/style_prompt" />

            <TextView
                android:id="@+id/attemptlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/attempts"
                android:text="@string/attempts" />

            <EditText
                android:id="@+id/attempts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:id="@+id/commentlabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/comment"
            android:text="@string/commentLabel"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/comment"
            android:layout_width="fill_parent"
            android:layout_height="100dip"
            android:inputType="text"
            android:textSize="18sp" />

        <RatingBar
            android:id="@+id/stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="3"
            android:stepSize="1.0" >
        </RatingBar>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="14sp" >
            </Button>

            <Button
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textSize="14sp" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</ScrollView>